Control with App
MATLAB App Designer integrates with my script for an easy an intuitive way to control.

Added a DataStorage class to serve as a handle class between the control_loop_visualizer app and my control_loop script

TODO: Change color of data series on app graphs and add labels as to what they are

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,10 @@ Tools/SS_Results/*
 .Trashes
 ehthumbs.db
 Thumbs.db
+Tools/SS_Results/arm26_controls.sto
+Tools/SS_Results/arm26_states.sto
+Tools/SS_Results/arm26_states_degrees.mot
+Tools/SS_Results/cumulative_controls.sto
+Tools/SS_Results/cumulative_motion.mot
+Tools/SS_Results/cumulative_states.sto
+Tools/SS_Results/single_step_controls.sto
